--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -1,3 +1,4 @@
 .main {
-  @apply bg-black
+  background: rgb(4,4,4);
+  background: linear-gradient(0deg, rgba(4,4,4) 9%, rgba(22,22,22) 27%, rgba(40,40,40) 46%);
 }
