--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,9 @@
-
+.split {
+  @apply md:flex
+}
 .container {
   @apply m-4
+  md:w-3/4
 }
 .avatar {
   @apply w-56 h-56 object-cover rounded-md shadow shadow-black
@@ -11,6 +14,7 @@
 }
 .contacts {
   @apply flex flex-col justify-between ml-4
+  md:hidden
 }
 .contactHeader {
   @apply text-greytext text-2xl
@@ -34,14 +38,21 @@
 
 .aboutHeader {
   @apply text-greytext text-2xl my-4
+  md:hidden
+
 }
 
 .about {
   @apply bg-gray p-4 rounded-md shadow shadow-black
+  md:hidden
 }
 
 .aboutText {
   @apply text-greytext
+}
+.MDaboutText {
+  @apply hidden
+  md:block md:ml-4 text-greytext
 }
 
 
@@ -79,6 +90,7 @@
 }
 .miscGroup {
   @apply border-b border-white
+  md:hidden
 }
 
 
