--- a/src/app/components/TechonologyCard.module.css
+++ b/src/app/components/TechonologyCard.module.css
@@ -1,5 +1,5 @@
 .container {
-  @apply bg-gray/75 p-3 rounded-md shadow shadow-black
+  @apply bg-gray/75 p-3 rounded-md
 }
 
 .container:hover {
@@ -15,5 +15,5 @@
 }
 
 .fill {
-  @apply bg-neutral-700 rounded-md p-2 shadow shadow-black
+  @apply bg-neutral-700 rounded-md p-2
 }
