--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,13 +21,13 @@
 
 }
 .avatar {
-  @apply w-56 h-56 object-cover rounded-md shadow shadow-black
+  @apply w-56 h-56 object-cover rounded-md
   xl:w-72 xl:h-72
 
 }
 
 .avatarAndContact {
-  @apply flex bg-gray/75  p-4 rounded-md shadow shadow-black
+  @apply flex bg-gray/50  p-4 rounded-md
   md:justify-evenly
 
 }
@@ -63,7 +63,7 @@
 }
 
 .about {
-  @apply bg-gray/75  p-4 rounded-md shadow shadow-black
+  @apply bg-gray/50  p-4 rounded-md
   xl:hidden
 }
 
@@ -72,14 +72,14 @@
 }
 .MDaboutText {
   @apply hidden
-  xl:block xl:ml-4 text-greytext
+  xl:block xl:ml-4 text-greytext xl:text-sm
 }
 
 
 
 .projectHeader {
   @apply text-white text-2xl my-4
-  xl:text-3xl xl:my-6
+  xl:text-xl xl:my-6
 }
 
 .projectCards {
@@ -91,12 +91,12 @@
 
 .technologiesHeader {
   @apply text-white text-2xl my-4
-  xl:text-3xl xl:my-6
+  xl:text-xl xl:my-6
 }
 
 .technologyHeader {
   @apply text-white my-2
-  xl:text-xl
+  xl:text-base
 }
 
 .technologyGroup {
@@ -106,7 +106,7 @@
 
 .techIcon {
   @apply text-6xl mx-auto
-  xl:text-8xl
+  xl:text-7xl
 }
 
 
@@ -126,6 +126,6 @@
 }
 
 .languageBox {
-  @apply bg-gray/75  rounded-md mb-4 w-full p-2 shadow shadow-black
+  @apply bg-gray/50  rounded-md mb-4 w-full p-2
 
 }
